gives the cat a name

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
 <div>
-<img style='border: medium dashed red' src='http://bit.ly/1eze8aE' alt='Cat!'>
+  <h1> My name is <%= ["My_first_one_was_cat", "John", "Sue", "Sellotape"].sample %> </h1>
+  <img style='border: medium dashed red' src='http://bit.ly/1eze8aE' alt='Cat!'>
 </div>
