moved name logic back in to app.rb

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <div>
-  <h1> My name is <%= ["My_first_one_was_cat", "John", "Sue", "Sellotape"].sample %> </h1>
+  <h1> My name is <%= @name_logic %> </h1>
   <img style='border: medium dashed red' src='http://bit.ly/1eze8aE' alt='Cat!'>
 </div>
