--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,9 @@
+<% @name = "Shrek" if @name.nil? %>
+  <h1> My name is <%= @name %> </h1>
+  <form action='/named-cat'>
+      <input type = "text" id="name" name="name">
+      <input type = "submit" id="submit" value="submit">
+  </form>
 <div>
-  <h1> My name is <%= @name_logic %> </h1>
   <img style='border: medium dashed red' src='http://bit.ly/1eze8aE' alt='Cat!'>
 </div>
